Colaboratory를 통해 생성됨

--- a/Unet++_Colorizatioin.ipynb
+++ b/Unet++_Colorizatioin.ipynb
@@ -696,7 +696,7 @@
         "  }\n",
         "  )\n",
         "\n",
-        "  '''with torch.no_grad(): # gradient 를 계산하지 않겠다 \n",
+        "  with torch.no_grad(): # gradient 를 계산하지 않겠다 \n",
         "    val_psnr, val_loss = validation_1epoch(net, val_dataloader)\n",
         "  print('[Validation] Epoch {}: psnr: {}, loss: {}'.format(epoch, val_psnr, val_loss))\n",
         "  val_info.append({\n",
@@ -712,7 +712,7 @@
         "      'psnr': val_psnr,\n",
         "      'loss': val_loss,\n",
         "      'model_weight': net.state_dict()\n",
-        "  }, output_path)'''"
+        "  }, output_path)"
       ],
       "execution_count": null,
       "outputs": []
